Uploading final version of final Project

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ You (text-colour:#ffc078)[[open your book]] as you don’t know who these people
 ]
 (after:12s)[You continue walking through the castle and find yourself listening through a (text-colour:#ffc078)[[door…]] ]</tw-passagedata><tw-passagedata pid="5" name="door…" tags="" position="975,200" size="100,100">“Henry VIII requested the Catholic Church to annul his marriage from Catherine of Aragon to which Pope Clement VII refused. 
 
-(after:3s)[This will lead him on a conquest to lead him not only to a new wife, but to sever his realm and people from their alliance to the Roman Catholic Church. The break with Rome would, in turn, lead to a reformation in religion and a revolution in the relationship of those people to the Tudor state” ]
+(after:3s)[This will lead him on a conquest to lead him not only to a new wife, but to sever his realm and people from their alliance to the Roman Catholic Church. The break with Rome would, in turn, lead to a reformation in religion and a revolution in the relationship of those people to the Tudor state” (Bucholz and Key, 65)]
 
 
 (after:8s)[You realize that you need to find out which side you are on… ]
@@ -87,11 +87,11 @@ On each side you have 2 doors, a Wooden Door to your right and a Metal Door to y
 
 (text-colour:#ffc078)[[Catholic]] Wooden Door will lead you through the Roman Catholic Church  
 
-(text-colour:#ffc078)[[Protestant]] Metal Door will lead you through the Reformation Period of Henry VIII  </tw-passagedata><tw-passagedata pid="8" name="Catholic" tags="" position="975,600" size="100,100">In 1529 Roman Catholicism was the official religion of the English state. This meant //two// things, First the Church was ever present in the life of the kingdom, and its people. It supplied them with their explanation of the universe and of their own trials and tribulations. 
+(text-colour:#ffc078)[[Protestant]] Metal Door will lead you through the Reformation Period of Henry VIII  </tw-passagedata><tw-passagedata pid="8" name="Catholic" tags="" position="975,600" size="100,100">&quot;In 1529 Roman Catholicism was the official religion of the English state. This meant //two// things, First the Church was ever present in the life of the kingdom, and its people. It supplied them with their explanation of the universe and of their own trials and tribulations. 
 
 (after:4s)[It marked stages of the lives in baptism, marriage, and burial. Church-affiliated guilds regulated the economic life of towns. Monasteries. Convents, and Church-run hospitals distributed charity. ]
 
-(after:10s)[The Church owned nearly a quarter of the land in England which meant that for many peasants and workers it was not only their chief source of spiritual wisdom and comfort, but also their landlord, employer, and neighbor. Finally, their //garish// priest was their primary source of news about the world beyond their villages and towns. (Rosman,11) ]
+(after:10s)[&quot;The Church owned nearly a quarter of the land in England which meant that for many peasants and workers it was not only their chief source of spiritual wisdom and comfort, but also their landlord, employer, and neighbor. Finally, their //garish// priest was their primary source of news about the world beyond their villages and towns&quot;. (Rosman,11) ]
 
 
 
@@ -122,15 +122,15 @@ On each side you have 2 doors, a Wooden Door to your right and a Metal Door to y
 “Henry VIII is the only supreme head in earth of the //Church of England//” 
 
 
-You must gather more information about The Roman (text-colour:#ffc078)[[Catholic Church]]</tw-passagedata><tw-passagedata pid="12" name="Citizen" tags="" position="650,625" size="100,100">All citizens were required to attend their parish churches on Sundays and holy days.  
+You must gather more information about The Roman (text-colour:#ffc078)[[Catholic Church]]</tw-passagedata><tw-passagedata pid="12" name="Citizen" tags="" position="650,625" size="100,100">&quot;All citizens were required to attend their parish churches on Sundays and holy days.  
 
 The religious culture of England is undergoing //radical change//. There has only been one universal or “Catholic”, church in Western Europe, headed by the pope in Rome. However, since England declared its independence of Rome; the English church was brought increasingly under state control and the king assumed its early headship.  
 
 
-Monasteries, Chantries and religious guilds were dissolved, and much of the wealth of the church was confiscated by the government (Rosman, 18) 
+Monasteries, Chantries and religious guilds were dissolved, and much of the wealth of the church was confiscated by the government&quot; (Rosman, 18). 
 
 
-(text-colour:#ffc078)[[Continue...]]</tw-passagedata><tw-passagedata pid="13" name="screams" tags="" position="825,950" size="100,100">“Henry VIII has just pronounced himself Supreme Head of the Church of England and has claimed //much// of its wealth. 
+(text-colour:#ffc078)[[Continue...]]</tw-passagedata><tw-passagedata pid="13" name="screams" tags="" position="825,950" size="100,100">“Henry VIII has just pronounced himself Supreme Head of the Church of England and has claimed //much// of its wealth.&quot; 
 
 (after:4s)[The separation of the church will bring political and religious turbulence in Western and Central Europe in the following years, you must hurry to find out who you are!] 
 
@@ -252,11 +252,11 @@ You //lost//! You did //not// make it out alive.
 
 Want to (text-colour:#ffc078)[[know some information]] about who you are? </tw-passagedata><tw-passagedata pid="25" name="Continue..." tags="" position="475,625" size="100,100">You find yourself in the middle of the forest … 
 
-(after:3s)[(text-colour:#e5dbff)[1)]To your right you see timber-framed houses with vegetable gardens, dunghills, orchards of apple, pear, and cherry trees, henhouses, cart houses and barns (Mortimer,) ]
+(after:3s)[(text-colour:#e5dbff)[1)]To your right you see timber-framed houses with vegetable gardens, dunghills, orchards of apple, pear, and cherry trees, henhouses, cart houses and barns (Mortimer, 5) ]
 
  
 
-(after:6s)[(text-colour:#e5dbff)[2)] To your left you see massive areas of hundreds of acres, or even thousand, each divided into smaller units called furlongs. (Mortimer, ]
+(after:6s)[(text-colour:#e5dbff)[2)] To your left you see massive areas of hundreds of acres, or even thousand, each divided into smaller units called furlongs. (Mortimer, 10]
  
 
 (after:10s)[(text-colour:#e5dbff)[3)] Straight ahead you see a medieval parish church that stands at the southern end of the town, a squat wooden spine stands on top of the church tower. (Mortimer, 2) 
@@ -331,7 +331,7 @@ There are 3 different (text-colour:#ffc078)[[paths you can take…]]
 
 (text-colour:#ffc078)[[Chapel Royal]]
 
-(text-colour:#ffc078)[[Large Open Fields and Woodlands]]]]</tw-passagedata><tw-passagedata pid="31" name="Chapel Royal" tags="" position="1800,975" size="100,100">English Church!
+(text-colour:#ffc078)[[Large Open Fields and Woodlands]]]</tw-passagedata><tw-passagedata pid="31" name="Chapel Royal" tags="" position="1800,975" size="100,100">English Church!
 
 (after:5s)[You are inside the Royal Chapel, which is outstandingly rich and colorful, as you look up and admire the chapel’s vaulted ceiling you hear people coming so you hide behind a curtain that allows you to look into a private pew on the first-floor level which looks down upon the main body of the chapel.  ]
 
